2006-05-06 Robert Pearce <rob@bdt-home.demon.co.uk>
	* modules/usart.h, modules/usart.cc: 
	 - Usart GUI now displays non-printable characters as <%02X>.
	 - The usart module now supports a transmit FIFO. This allows
	 transmit data to be queued while the simulation is stopped.

2006-04-30 Roy Rankin <rrankin@ihug.com.au>
	* gui/gui_src.h gui/gui_src_asm.cc: fix ungisgned - signed compile 
	  warnings
	* gui/gui_breadboard.cc: get trace working again
	* gui/Makefile.am: remove unused and incorrect defines

2 06-04-29 Scott Dattalo <scott@dattalo.com>
	* modules/switch.cc, modules/switch.h,
	regression/switch_test/switch_test.asm:  Moved pin functionality
	from the Switch class into the Switch_Pin class.

2006-04-29 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/value.cc: Fixed Float type check error.

2006-04-29 Roy Rankin <rrankin@ihug.com.au>
	* src/gpsim_object.h src/gpsim_object.cc src/stimuli.cc
          src/stimuli.h gui/gui_breadboard.h gui/gui_breadboard.cc:
	- GUI pin rename code - rewritten and moved into IOPIN class
        * src/comparator.h src/comparator.cc p16f62x.cc: 
	- Do dynamic GUI pin renaming
        * gui/Makefile.am: remove unused and incorrect defines
        * src/processor.cc: Set 4 clock cycles per instruction cycle
        * regression/comparator/compar_628.asm: Start by turning off comparators

2006-04-28 Borut Razem <borut.razem@siol.net>
	* modules/makefile.migw, modules/modules.vcproj,
	  plat/win32/libgpsim.def, extras/lcd/makefile.mingw,
	  plat/win32/gpsim.nsi: WIN32 sync

2006-04-26 Scott Dattalo <scott@dattalo.com>
	* modules/switch.cc, modules/switch.h, modules/gpsim_modules.cc:
	- Added On-resistance and Off-resistance attributes to the switch
	module. (They're called Ropen and Rclosed). 
	- The switch module code now resides in the 'Switches' namespace.
	* modules/resistor.cc:
	- The resistor module now initializes itself with the gpsim
	default attributes (which for now are only xpos and ypos).
